tests/errors/syn7.kt
return 5 //return outside function